# iamd-threat-detection-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
data/sample_sensors/: ais.jsonl  eo_ir.jsonl  radar.jsonl
deploy/k8s/: audit-log.yaml  configmaps.yaml  cop-dashboard.yaml  ingress.yaml  namespace.yaml  secrets.example.yaml  sensor-ingest.yaml  threat-scoring.yaml  track-fusion.yaml
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DEMO_SCRIPT.md  INTERFACES.md  RUNBOOK.md  SECURITY_CONTROLS.md  TEST_PLAN.md  THREAT_MODEL.md
policy/: policy.json
scripts/: dev-down.ps1  dev-up.ps1  new-jwt.ps1  seed-data.ps1  validate.ps1
services/audit-log/: Dockerfile
services/audit-log/app/: main.py
services/common/: pyproject.toml
services/common/iamd_common/: __init__.py  auth.py  log.py  models.py
services/cop-dashboard/: Dockerfile  requirements.txt
services/cop-dashboard/app/: main.py
services/cop-dashboard/app/templates/: index.html
services/sensor-ingest/: Dockerfile  requirements.txt
services/sensor-ingest/app/: main.py
services/threat-scoring/: Dockerfile  requirements.txt
services/threat-scoring/app/: main.py  rules.yaml  scoring.py
services/track-fusion/: Dockerfile  requirements.txt
services/track-fusion/app/: fusion.py  main.py
